--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_API_URL="postgres://tvievlcp:P-ebhjfMse3smQmmt-ArJiPRMnFrJdTC@berry.db.elephantsql.com/tvievlcp"
+REACT_APP_API_URL="https://welovemovies-okoa.onrender.com"
